on Home -> start page, on End -> end page

--- a/apps/adrenaline_web/lib/adrenaline_web/live/chart/chart_live.html.heex
+++ b/apps/adrenaline_web/lib/adrenaline_web/live/chart/chart_live.html.heex
@@ -28,4 +28,6 @@
   <div class="contents" phx-window-keydown="pane-next-period" phx-key="ArrowRight"></div>
   <div class="contents" phx-window-keydown="pane-prev-page" phx-key="PageUp"></div>
   <div class="contents" phx-window-keydown="pane-next-page" phx-key="PageDown"></div>
+  <div class="contents" phx-window-keydown="pane-first-page" phx-key="Home"></div>
+  <div class="contents" phx-window-keydown="pane-last-page" phx-key="End"></div>
 </div>
